<resources>
    <string name="app_name">ShopBuddy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title">ShopBuddy</string>
    <string name="loginScreen_register_text"><b><u>Opret Bruger</u></b></string>
    <string name="loginScreen_userName_hint">Email</string>
    <string name="loginScreen_password_hint">Password</string>

    <string name="google_map_key">AIzaSyB5XfRLJLSH2HRD6HX9oj8BcAkAv_QcoE8</string>
    <string name="shop_gun_key">cDD7cy</string>
    <string name="shop_gun_secret">sBBrfMh-2IP0JdvhXCGsh</string>

    <string name="first_fragment_label">Alle Lister</string>
    <string name="second_fragment_label">Specifik Liste</string>

    <string name="hello_first_fragment">These are all your shopping lists</string>
    <string name="hello_second_fragment">These are all the items in the list</string>

    <string name="menu_button_1">Kort</string>
    <string name="menu_button_2">Tilbud</string>
    <string name="menu_button_3">Indkøbslister</string>
    <string name="menu_button_4">Alarmer</string>

    <string name="offer_store_items_text">Antal nedsatte varer:</string>
    <string name="enter_product">Indtast en vare</string>
</resources>