<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:orientation="horizontal"
        android:background="@color/ShopLightBuddyBlue">

        <LinearLayout
            android:id="@+id/menu_button_1_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/menu_button_1"
                android:layout_width="120px"
                android:layout_height="120px"
                android:background="@drawable/ic_shopping_map"
                android:backgroundTint="@color/ShopDarkBuddyBlue" />

            <TextView
                android:id="@+id/menu_button_1_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_button_1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_button_2_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/menu_button_2"
                android:layout_width="120px"
                android:layout_height="120px"
                android:background="@drawable/ic_tilbudsavis"
                android:backgroundTint="@color/ShopDarkBuddyBlue" />

            <TextView
                android:id="@+id/menu_button_2_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_button_2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_button_3_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/menu_button_3"
                android:layout_width="120px"
                android:layout_height="120px"
                android:background="@drawable/ic_liste"
                android:backgroundTint="@color/ShopDarkBuddyBlue" />

            <TextView
                android:id="@+id/menu_button_3_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_button_3"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_button_4_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/menu_button_4"
                android:layout_width="120px"
                android:layout_height="120px"
                android:background="@drawable/ic_notifications_black_24dp"
                android:backgroundTint="@color/ShopDarkBuddyBlue" />

            <TextView
                android:id="@+id/menu_button_4_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_button_4"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>