<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80C2FF">

    <Button
        android:id="@+id/registerScreen_registerBtn"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#316CA2"
        android:fontFamily="@font/roboto_medium"
        android:text="Opret Bruger"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="275dp"
        android:layout_height="111dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/textview_border"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/login_password_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register_username_editText" />

    <EditText
        android:id="@+id/register_password_editText"
        android:layout_width="260dp"
        android:layout_height="54dp"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/loginScreen_password_hint"
        android:inputType="text|textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_titel" />

    <EditText
        android:id="@+id/register_username_editText"
        android:layout_width="260dp"
        android:layout_height="54dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/loginScreen_userName_hint"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_titel" />

    <TextView
        android:id="@+id/register_titel"
        android:layout_width="327dp"
        android:layout_height="67dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246" />
</androidx.constraintlayout.widget.ConstraintLayout>